--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -63,6 +63,12 @@
                                 #{{ loop.index }} &nbsp;&#10744;&nbsp; {{ comment.timestamp | format_date_ago() }}
                             </a>
                         </div>
+                        {% if comment.recommended %}
+                        {# Special-Char: &#9733; = Black Star #}
+                        <div class="comment__recommendations">
+                            {{ comment.recommendations }} &#9733;
+                        </div>
+                        {% endif %}
                         <div class="comment__body">
                             {{ comment.text | safe }}
                         </div>
