ZON-1413: Polishing mobile

--- a/sass/web.site/modules/_adplaces.sass
+++ b/sass/web.site/modules/_adplaces.sass
@@ -62,7 +62,7 @@ $mobile_middle_ad_break_left_margin: $mobile_ad_width + $page-padding--small*2
 	&__inner
 		@extend %ad__mr__inner
 	&--on-centerpage
-		margin: 0 auto $compact auto
+		margin: 0 auto remify(45px) auto
 		+respond-min($break-2)
 			padding: 0
 			border: none
