--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -19,7 +19,7 @@ $zon-search-square-size: remify(35px)
 	+flex-wrap(wrap)
 	font-family: $font-tabletgothic
 	width: 100%
-	padding: 0 0 $fine 0
+	padding: 0
 	+respond-min($break-tablet-min)
 		padding: $fine $petite $fine $petite
 	& > *[data-dropdown="true"]
