--- a/sass/web.site/modules/_teaser-buzz.sass
+++ b/sass/web.site/modules/_teaser-buzz.sass
@@ -1,6 +1,5 @@
 .buzz-box
-	+respond-min($break-tablet-min)
-		margin-bottom: $twice
+	padding-bottom: remify(30px)
 
 	&__heading
 		border-bottom: 1px solid $color-border
@@ -9,7 +8,7 @@
 		letter-spacing: 1px
 		line-height: normal
 		margin: 0 0 $fine 0
-		padding: remify(10px)
+		padding: remify(0 10px 10px 10px)
 		text-transform: uppercase
 
 =buzz-teaser($layout)
