--- a/sass/web.site/modules/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/_teaser-parquet-large.sass
@@ -1,6 +1,6 @@
 .teaser-parquet-large
 	@extend %teaser
-	padding: remify($petite--px) $page-padding
+	padding: remify($petite--px) remify(40px)
 	+respond-min($break-tablet-min)
 		padding: remify(0 0 $petite--px 0)
 
