--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -12,7 +12,7 @@
     {{ footer.footer_links(view) }}
     <div class="footer-links__seperator"></div>
     <div class="footer-links__button">
-        {{ footer.footer_button(view) }}
+        <a href="?" class="footer-links__linkbutton" title="Zurück nach oben">Nach oben</a>
     </div>
 </div>
 
