--- a/sass/web.site/modules/_article.sass
+++ b/sass/web.site/modules/_article.sass
@@ -5,13 +5,15 @@
 		margin: auto
 
 .article-heading
-	margin: remify($petite--px) 0
+	margin: remify($petite--px) 0 remify(25px) 0
 
 .kicker
 	color: $zon-red
 	display: block
 	font-family: $font-tabletgothic
 	font-size: remify(14px)
+	letter-spacing: $zon-letter-spacing-m
+	padding-bottom: remify(17px)
 	+respond-min($break-desktop-min)
 		font-size: remify(14px)
 
@@ -20,6 +22,7 @@
 	display: block
 	font-family: $font-tabletgothic
 	font-size: remify(30px)
+	line-height: 1.2
 	+respond-min($break-desktop-min)
 		font-size: remify(42px)
 
@@ -27,7 +30,7 @@
 	color: $grey--mid
 	font-family: $font-tabletgothic
 	font-size: remify(18px)
-	line-height: 1.2
+	line-height: 1.5
 	margin-bottom : remify($petite--px)
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
@@ -35,7 +38,7 @@
 .paragraph
 	font-family: $font-franziska
 	font-size: remify(18px)
-	line-height: 1.3
+	line-height: 1.4
 	margin-bottom: $little
 	+respond-min($break-desktop-min)
 		font-size: remify(20px)
@@ -43,7 +46,7 @@
 .byline
 	color: $grey--mid
 	font-family: $font-tabletgothic
-	margin-bottom : remify($petite--px)
+	margin-bottom : remify(40px)
 
 .byline__author
 	font-weight: bold
@@ -55,9 +58,9 @@
 
 .stage--large
 	width: auto
-	margin: 0 (-$page-padding)
+	margin: 0 (-$page-padding) 40px (-$page-padding)
 	+respond-min($break-desktop-min)
-		margin: 0 -80px
+		margin: 0 -80px 40px -80px
 		img
 			width: 100% // prevents 'max-width: 100%', blows image up
 
@@ -65,8 +68,8 @@
 	font-family: $font-franziska
 	font-size: remify(14px)
 	font-style: italic
+	line-height: 1.5
 	margin: $thin $page-padding 0 $page-padding
-
 	+respond-min($break-desktop-min)
 		margin: $thin remify(80px) 0 remify(80px)
 		font-size: remify(16px)
