--- a/sass/web.site/modules/_main.sass
+++ b/sass/web.site/modules/_main.sass
@@ -1,10 +1,12 @@
 .main
 	padding: 0 $page-padding
+	overflow: hidden // prevent android from wrong zooming
 	&__fullwidth
 		display: block
 		width: 100%
 	&__content
 		display: block
+		padding-bottom: remify(20px)
 		width: 100%
 		+respond-min($break-tablet-min)
 			display: inline-block
@@ -12,8 +14,10 @@
 	&__informatives
 		display: block
 		overflow: hidden
+		padding-bottom: remify(20px)
 		vertical-align: top
 		width: 100%
 		+respond-min($break-tablet-min)
 			display: inline-block
+			padding-top: remify(20px)
 			width: 31.815% //32%
