--- a/sass/web.site/modules/_snapshot.sass
+++ b/sass/web.site/modules/_snapshot.sass
@@ -48,12 +48,19 @@
 	+on-interaction
 		color: $grey
 	&:after
-		content: " \276F"
-		font-size: 1.4em
-		line-height: 1
+		+inline-block
+		content: " \203A"
+		font-size: remify(32px)
+		line-height: 0
+		position: absolute
+		right: 0
+		top: remify(8px)
 		+respond-min($break-phablet-min)
-			content: " \203A"
 			font-size: 1em
+			padding-left: remify(4px)
+			position: static
+			right: auto
+			top: auto
 	&__item
 		+respond-max($break-phablet-min)
 			display: none
