--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -60,4 +60,5 @@
 
 // comments
 @import "modules/comments/comment-section"
+@import "modules/comments/comment-form"
 @import "modules/comments/comment"
