--- a/src/zeit/web/magazin/templates/inc/headers/article_header_mode.html
+++ b/src/zeit/web/magazin/templates/inc/headers/article_header_mode.html
@@ -9,7 +9,7 @@
                 {{ blocks.title() }}
             </h1>
             <span class="article__head__meta">
-                {{ blocks.source_date(view.show_article_date | format_date(view.show_date_format), view.source) }}
+                {% include "zeit.web.magazin:templates/inc/article_area_date.html" ignore missing %}
             </span>
             {{ blocks.subtitle(include_meta=True) }}
         </div>
