--- a/src/zeit/web/magazin/templates/inc/headers/article_header_traum.html
+++ b/src/zeit/web/magazin/templates/inc/headers/article_header_traum.html
@@ -18,7 +18,7 @@
                     {%- endif %}
                     {{ blocks.meta_author(view.authors) }}
                 </div>
-                {{ blocks.source_date(view.show_article_date | format_date(view.show_date_format), view.source) }}
+                {% include "zeit.web.magazin:templates/inc/article_area_date.html" ignore missing %}
             </span>
         </span>
     </header>
