--- a/src/zeit/web/magazin/templates/product.html
+++ b/src/zeit/web/magazin/templates/product.html
@@ -17,7 +17,7 @@
             {{ view.galleryText|safe }}
         </div>
         <div class="article__head__meta">
-            {{ blocks.source_date(view.show_article_date | format_date(view.show_date_format), view.source) }}
+            {% include "zeit.web.magazin:templates/inc/article_area_date.html" ignore missing %}
         </div>
     </div>
 
