--- a/src/zeit/web/site/templates/article.html
+++ b/src/zeit/web/site/templates/article.html
@@ -26,8 +26,18 @@
             {% endif %}
         </div>
         <div class="metadata">
-            <time class="encoded-date" datetime="{{ view.show_article_date | format_date('iso8601') }}" data-obfuscated="{{ view.obfuscated_date }}">
-                {{ view.show_article_date | format_date(view.show_date_format) }}
+            {% if view.source_label -%}
+            <span class="metadata__source{% if view.obfuscated_source %} encoded-date" data-obfuscated="{{ view.obfuscated_source }}{% endif %}">
+                {%- if view.source_url -%}
+                <a href="{{ view.source_url }}">{{ view.source_label }}</a> -
+                {%- else -%}
+                {{ view.source_label }}
+                {%- endif -%}
+            </span>
+            {% endif -%}
+
+            <time class="metadata__date encoded-date" datetime="{{ view.date_last_modified | format_date('iso8601') }}" data-obfuscated="{{ view.obfuscated_date }}">
+                {{ view.date_last_modified | format_date(view.show_date_format) }}
             </time>
         </div>
         <div class="article-body">
