--- a/src/zeit/web/site/templates/layout.html
+++ b/src/zeit/web/site/templates/layout.html
@@ -37,7 +37,7 @@
         <link href="{{ request.asset_url('css/web.site/ie-navi.css') }}" media="screen" rel="stylesheet" type="text/css">
     <![endif]-->
 
-    {%- include "zeit.web.site:templates/inc/meta/date.html" ignore missing -%}
+    {%- include "zeit.web.core:templates/inc/meta/date.html" ignore missing -%}
     {%- include "zeit.web.site:templates/inc/meta/sharing.html" ignore missing -%}
 
     {# Modernizr -#}
