ZON-1392: more comment-form juggling

--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -17,6 +17,8 @@
 		margin: auto
 
 .comment-login
+	padding-bottom: 3rem
+	padding-top: 3rem
 	text-align: center
 	&__cta
 		display: inline-block
