--- a/src/zeit/web/site/templates/inc/footer.html
+++ b/src/zeit/web/site/templates/inc/footer.html
@@ -2,7 +2,7 @@
 
 <div class="footer-logo">
     <div class="footer-logo__image">
-        {{ footer.footer_logo() }}
+        {{ footer.footer_logo(view.request) }}
     </div>
 </div>
 <div class="footer-publisher">
