--- a/src/zeit/web/site/templates/inc/navigation.html
+++ b/src/zeit/web/site/templates/inc/navigation.html
@@ -4,7 +4,7 @@
 
     <!-- logo -->
     <div class="logo_bar">
-        <div class="logo_bar__image">{{ nav.main_nav_logo() }}</div>
+        <div class="logo_bar__image">{{ nav.main_nav_logo(view.request) }}</div>
         <div class="logo_bar__menue">{{ nav.main_nav_burger() }}</div>
     </div>
     <!-- special teaser -->
@@ -12,15 +12,14 @@
 
     <!-- wrap start -->
     <div class="main_nav__community" data-dropdown="true">{{
-    nav.main_nav_community() }}</div>
-    <div class="main_nav__ressorts" data-dropdown="true">
-            {{ nav.main_nav_ressorts(view.navigation) }}
-    </div>
+    nav.main_nav_community(view.request) }}</div>
+    <div class="main_nav__ressorts" data-dropdown="true">{{
+    nav.main_nav_ressorts(view.navigation, view.request) }}</div>
     <div class="main_nav__services" data-dropdown="true">{{
-    nav.main_nav_services(view.navigation_services) }}</div>
+    nav.main_nav_services(view.navigation_services, view.request) }}</div>
     <div class="main_nav__classifieds" data-dropdown="true">{{
-    nav.main_nav_classifieds(view.navigation_classifieds) }}</div>
-    <div class="main_nav__search" data-dropdown="true">{{ nav.main_nav_search() }}</div>
+    nav.main_nav_classifieds(view.navigation_classifieds, view.request) }}</div>
+    <div class="main_nav__search" data-dropdown="true">{{ nav.main_nav_search(view.request) }}</div>
     <!-- wrap end -->
     <!-- please don't break line here, due to inline-block state -->
     <div class="main_nav__tags">{{ nav.main_nav_tags(view.topiclink_title,
